# gridbotchuck

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  15MIN_TRADING_GUIDE.md  API_REQUIREMENTS.txt  BOT_CONTROL_SYSTEM.md  BUILD_GUIDE.md  BUILD_WINDOWS.bat  CHANGELOG_IMPROVEMENTS.md  CI_FIX_INSTRUCTIONS.md  CLAUDE.md  CLAUDE_MEMORY.md  CLAUDE_SESSION_STATUS.md  CURRENT_SETUP.md  DASHBOARD_BUTTON_TEST_RESULTS.md  DASHBOARD_FIX_SUMMARY.md  DASHBOARD_LAUNCHER_GUIDE.md  DASHBOARD_QUICKSTART.md  DASHBOARD_SOURCE_EXPORT.md  DASHBOARD_TEST_CHECKLIST.md  DASHBOARD_VISUAL_GUIDE.md  DESKTOP_LAUNCHER_SETUP.md  DESKTOP_LAUNCHER_SUMMARY.md  DESKTOP_SHORTCUT_INSTALL.md  DOCUMENTATION_INDEX.md  Dockerfile  FIX_ALL_SUMMARY.md  FIX_ARGUMENT_ERROR.md  GITHUB_RELEASE_INSTRUCTIONS.md  GridBot.bat  GridBot_Portable_Installer.bat  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_GUIDE.md  INSTALLATION_CHECKLIST.md  INSTALL_SHORTCUT.bat  LICENSE  MARKETING_STRATEGY.md  MOBILE_APP_SPEC.md  (+103 more)
.claude/: settings.local.json
.github/workflows/: build-android.yml  build-windows.yml  ci.yml  release.yml  run-tests-on-push-or-merge-pr-master.yml
backups/backup_2026-01-02/: launcher.py  scan_ema_signals.py  signal_logger.py  test_smoke.py
backups/backup_2026-01-02_213746/: API_INTEGRATION_EXAMPLE.py  beta_manager.py  dashboard_launcher.py  main.py  test_coinbase.py  triple_threat_trader_coinbase.py
backups/backup_2026-01-04_0000/: adaptive_scanner.py  bot_taskbar_control.py  dashboard_launcher.py  family_scanner.py  main.py  trading_control_center.py
backups/ema_bot_2025-12-20/: ema_crossover_strategy.py  health_check.py  run_ema_bot.py  scan_ema_signals.py
config/: config.example.json  config.json  config_ETH_USD.json  config_VET_USD.json  config_VET_USD_auto.json  config_atom_momentum.json  config_chuck_ADA_USD.json  config_chuck_VET_USD.json  config_coinbase.json  config_crosskiller.json  config_growler_ATOM_USD.json  config_growler_AVAX_USD.json  config_growler_bearish.json  config_manager.py  config_paper_trading.json  config_pepe_momentum.json  config_small_capital_multi_pair.json  config_smart_ALGO_USD.json  config_smart_CRV_USD.json  config_smart_PEPE_USD.json  config_smart_SOL_USD.json  config_smart_VET_USD.json  config_smart_growler_CRV_USD.json  config_smart_growler_ICP_USD.json  config_smart_growler_PEPE_USD.json  config_smart_growler_UNI_USD.json  config_smart_growler_VET_USD.json  config_validator.py  config_vet_momentum.json  exceptions.py
config/backups/: config_ada_20260104_working.json  config_btc_20260104_working.json
core/bot_management/: activity_monitor.py  bot_api_integration.py  bot_api_server.py  enhanced_multi_pair_manager.py  event_bus.py  grid_trading_bot.py  health_check.py  multi_pair_manager.py  profit_rotation_manager.py  rotation_bot_integration.py
core/grid_management/: grid_level.py  grid_manager.py
core/licensing/: __init__.py  license_manager.py
core/order_handling/: balance_tracker.py  enhanced_order_manager.py  order.py  order_book.py  order_manager.py  order_status_tracker.py
core/persistence/: order_repository.py
core/risk_management/: circuit_breaker.py  rate_limiter.py
core/security/: __init__.py  api_auth.py  cors_config.py  input_validator.py  rate_limiter.py  security_headers.py
core/services/: backtest_exchange_service.py  exchange_interface.py  live_exchange_service.py
core/validation/: enhanced_order_validator.py  order_validator.py
data/: active_pairs.json  backtest_coinbase_5m.csv  backtest_optimization_results.csv  backtest_results.json  backtest_results_growler.json  watchdog_state.json
desktop/: package-lock.json  package.json
desktop/assets/: README.txt
desktop/src/: main-simple.js  main.js  preload.js
docs/: GridBot Chuck - AI Features Guide.txt  GridBot Quick Start.txt
installer/windows/: build_windows.py  gridbot.spec
market_scanner/: .gitignore  README.md  app.py  config.py  main.py  pair_backtester.py  requirements.txt
market_scanner/.github/: copilot-instructions.md
market_scanner/AndroidApp/: settings.gradle
market_scanner/strategies/: __init__.py  long_term.py  risk.py  strategic.py  trading.py
mobile/: API_QUICK_REFERENCE.md  README.md
mobile/android/: BotRepository.kt  DashboardScreen.kt  DashboardViewModel.kt  DataModels.kt  GridBotApiService.kt  NetworkModule.kt  build.gradle.kts.template
netlify_site/: EMAILJS_SETUP.md  _redirects  index.html
news_analyzer/: __init__.py  analyzer.py  backtester.py  fetcher.py  sentiment.py  tracker.py
optimization/: __init__.py  asset_optimizer.py  indicator_combos.py  optimal_configs.json
portable/: BUILD_PORTABLE.ps1  CHECK_ACCOUNT.bat  README.txt  SCAN_MARKET.bat  SETUP.bat  START_BOT.bat  STOP_BOT.bat
portable/config/: .env.example  ema_settings.json
portable/python/: LICENSE.txt
portable/scripts/: health_check.py  run_ema_bot.py  scan_ema_signals.py
reports/: daily_report_20260106_1013.md  daily_report_20260106_1307.md
setup_wizard/templates/: index.html
strategies/: auto_portfolio_manager.py  buy_sell_point_calculator.py  candlestick_patterns.py  ema_crossover_strategy.py  entry_signals.py  grid_trading_strategy.py  market_analyzer.py  momentum_strategy.py  momentum_strategy_new.py  multi_timeframe_analyzer.py  pair_performance_monitor.py  pair_scanner.py  plotter.py  trading_performance_analyzer.py
tests/: conftest.py
tests/bot_management/: test_bot_controller.py  test_dashboard_buttons.py  test_grid_trading_bot.py  test_health_check.py  test_notification_handler.py
tests/config/: test_config_manager.py  test_config_validator.py
tests/grid_management/: test_grid_level.py  test_grid_manager.py
tests/order_handling/: test_backtest_order_execution_strategy.py  test_balance_tracker.py  test_fee_calculator.py  test_live_order_execution_strategy.py  test_order.py  test_order_book.py  test_order_manager.py  (+2 more)
tradingview/: multi_indicator_oscillators.pine  multi_indicator_strategy.pine
utils/: arg_parser.py  config_name_generator.py  logging_config.py  performance_results_saver.py
(+65 files in other folders)
