[project]
name = "grid_trading_bot"
version = "0.1.0"
description = "Open-source cryptocurrency trading bot designed to perform grid trading strategies using historical data for backtesting."
authors = [{ name = "Jordan TETE", email = "tetej171@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.12"
dependencies = [
    "pandas==2.2.3",
    "numpy==2.1.3",
    "plotly==6.3.0",
    "tabulate==0.9.0",
    "aiohttp==3.10.11",
    "apprise==1.9.6",
    "ccxt==4.4.82",
    "configparser==7.2.0",
    "psutil==7.1.3",
    "python-dotenv==1.2.1"
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio==0.26.0",
    "pytest-cov==7.0.0",
    "pytest-timeout==2.4.0",
    "pre-commit==4.3.0",
]

[project.urls]
repository= "https://github.com/jordantete/grid_trading_bot"
issues = "https://github.com/jordantete/grid_trading_bot/issues"
discussions = "https://github.com/jordantete/grid_trading_bot/discussions"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
log_cli = true
log_cli_level = "INFO"
markers = [
    "asyncio: mark a test as an async test",
    "timeout: mark a test with a timeout"
]

[tool.pytest_asyncio]
mode = "auto"

[tool.coverage.run]
omit = [
    "*/interface*.py"
]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["core", "strategies", "config", "utils", "tests"]
exclude = ["backups", "*.bak", "*.backup", ".venv", "venv", "__pycache__"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
    "PT",   # flake8-pytest-style
    "Q",    # flake8-quotes
    "A",    # flake8-builtins
    "COM",  # flake8-commas
    "DTZ",  # flake8-datetimez
    "TCH",  # flake8-type-checking
]
ignore = [
    "S101",   # assert used (OK in tests)
    "COM812", # missing trailing comma (handled by formatter)
    "E722",   # bare except (legacy code)
    "S110",   # try-except-pass (legacy code)
    "SIM105", # contextlib.suppress suggestion
    "B007",   # unused loop variable (legacy code)
    "DTZ005", # datetime.now() timezone (legacy code uses naive datetimes)
    "DTZ003", # datetime.utcnow() (legacy code)
    "F403",   # star imports (legacy code)
    "F405",   # undefined from star import (legacy code)
    "N802",   # function name lowercase (legacy naming)
    "N803",   # argument name lowercase (legacy naming)
    "N806",   # variable lowercase (legacy naming)
    "N815",   # mixedCase in class (legacy naming)
    "N816",   # mixedCase in global (legacy naming)
    "E501",   # line too long (legacy code)
    "E402",   # imports not at top (legacy code)
    "E741",   # ambiguous variable name (legacy code)
    "RUF012", # mutable class default (legacy code)
    "UP031",  # printf-style formatting (legacy code)
    "B018",   # useless expression (legacy code)
    "B904",   # exception chaining (legacy code)
    "N801",   # class name CapWords (legacy naming)
    "N818",   # exception naming (legacy code)
    "S105",   # possible hardcoded password (false positives)
    "S608",   # SQL injection (false positives - uses parameterized queries)
    "S102",   # exec usage (legacy code)
    "S105",   # hardcoded password (false positive)
    "S112",   # try-except-continue (legacy code)
    "S311",   # random for crypto (false positive)
    "S603",   # subprocess call (legacy code)
    "S605",   # shell=True (legacy code)
    "E721",   # type comparison (legacy code)
    "A001",   # shadowing builtin (legacy code)
    "A002",   # shadowing builtin argument (legacy code)
    "F821",   # undefined name (from dynamic imports)
    "F401",   # unused import (legacy code)
    "F541",   # f-string without placeholders (legacy code)
    "F841",   # unused variable (legacy code)
    "SIM102", # nested if (legacy code)
    "SIM108", # ternary operator (legacy code)
    "SIM112", # env var (legacy code)
    "SIM115", # open context manager (legacy code)
    "RUF003", # ambiguous unicode (legacy code)
    "RUF006", # asyncio dangling task (legacy code)
    "RUF013", # implicit Optional (legacy code)
    "RUF059", # unused variable (legacy code)
    "RUF001", # ambiguous unicode (legacy code)
    "PT028",  # pytest fixture (legacy code)
    "DTZ004", # datetime timezone (legacy code)
    "DTZ901", # datetime timezone (legacy code)
    "I001",   # unsorted imports (legacy code)
    "W191",   # indentation tabs (legacy code)
    "W291",   # trailing whitespace (legacy code)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["core", "strategies", "config", "utils"]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
# CLI scripts intentionally use print() for console output
"adaptive_scanner.py" = ["T201"]
"family_scanner.py" = ["T201"]
"stock_trading_assistant.py" = ["T201"]
"optimization/asset_optimizer.py" = ["T201"]
"run_all_backtests.py" = ["T201"]
"run_optimization.py" = ["T201"]
"tools/cli_tools.py" = ["T201"]
"tools/health_check.py" = ["T201"]
"market_diagnostics.py" = ["T201"]
"multi_pair_runner.py" = ["T201"]
"pair_validator.py" = ["T201"]
"simple_adaptive_scanner.py" = ["T201"]
"triple_threat_trader.py" = ["T201"]
"triple_threat_trader_coinbase.py" = ["T201"]
"main.py" = ["T201"]
"signal_logger.py" = ["T201"]
"discord_poster.py" = ["T201"]
"beta_manager.py" = ["T201"]
"analyze_opportunity.py" = ["T201"]
"bot_taskbar_control.py" = ["T201"]
"quick_scan.py" = ["T201"]
"launcher.py" = ["T201"]
"desktop/*" = ["T201"]
"mobile/*" = ["T201"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["logs", "data"]

[tool.setuptools]
include-package-data = true
